# extract-stack-template

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
