[package]
name = "extract-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
arrow = "51.0.0"
futures = "0.3.30"
hf-hub = { version = "0.3.2", features = ["tokio"] }
indicatif = { version = "0.17.8", features = ["tokio"] }
lazy_static = "1.4.0"
memchr = "2.7.2"
parquet = { version = "51.0.0", features = ["async"] }
regex = "1.10.4"
tokio = { version = "1.36.0", features = ["fs", "sync"] }
unicode-ident = "1.0.12"

[dev-dependencies]
rand = "0.8.5"
